--- a/locales/zh-CN.yaml
+++ b/locales/zh-CN.yaml
@@ -1,1 +1,3 @@
-database.bucketNotFound: 未找到bucket
+error.bucketNotFound: 未找到bucket
+error.needAddQueryCompare: 需要添加查询比较条件
+error.illegalOperator: 非法运算符
