--- a/frontend/src/locales/zh-CN.yaml
+++ b/frontend/src/locales/zh-CN.yaml
@@ -32,6 +32,7 @@ dialog:
 nav:
   record: 记录
   clock: 计时
+  setting: 设置
 clock:
   selectRecord: 选择记录
   createLabel: 创建标签
@@ -46,8 +47,12 @@ systemMenu:
 config:
   version: 版本
   locale: 语言
+  autoCheckUpdate: 自动检查版本
 about:
   upgrade: 更新
   lasest: 最新版本({version})
   alreadyLasest: 已更新到最新版本
   current: 当前版本({version})
+locale:
+  simpChinese: 简体中文
+  english: English
