添加configProvider国际化、database错误处理、别名

--- a/src/locales/en-US.yaml
+++ b/src/locales/en-US.yaml
@@ -7,3 +7,7 @@ config:
   locale: Language
 plan:
   create: Create plan
+  name: Name
+error:
+  unique: "{field} already exists"
+  unhandle: "Unhandled exception({content})"
