--- a/src/locales/en-US.yaml
+++ b/src/locales/en-US.yaml
@@ -7,7 +7,10 @@ config:
   locale: Language
 plan:
   create: Create plan
+  select: Select plan
   name: Name
 error:
-  unique: "{field} already exists"
-  unhandle: "Unhandled exception({content})"
+  unique: '{field} already exists'
+  unhandle: Unhandled exception({content})
+message:
+  success: Operate successfully
