--- a/src/locales/zh-CN.yaml
+++ b/src/locales/zh-CN.yaml
@@ -7,7 +7,10 @@ config:
   locale: 语言
 plan:
   create: 创建计划
+  select: 选择计划
   name: 名称
 error:
   unique: "{field}已存在"
   unhandle: "未处理异常({content})"
+message:
+  success: 操作成功
