添加更新下载状态、修改log时间

--- a/src/locales/en-US.yaml
+++ b/src/locales/en-US.yaml
@@ -48,3 +48,5 @@ tray:
 updater:
   title: Update
   content: The new version {version} has been released. Are you sure to update it?
+  checkUpdate: An error occurred while pulling the latest version
+  error: An error occurred while updating
