修改数据库结构
1、plan添加color
2、label添加外键planId

--- a/src/locales/en-US.yaml
+++ b/src/locales/en-US.yaml
@@ -10,10 +10,12 @@ plan:
   create: Create plan
   update: Update plan
   name: Name
+  color: Color
 label:
   create: Create Label
   update: Update Label
   name: Name
+  plan: Plan Name
 error:
   unique: '{field} already exists'
   unhandle: Unhandled exception({error})
