--- a/src/locales/en-US.yaml
+++ b/src/locales/en-US.yaml
@@ -68,3 +68,7 @@ chart:
   week:
     active: One week active status
     switch: Switch
+monitor:
+  filter: Toggle filter switch
+  needSwitchFilter: You need to turn on the filter switch to listen for window changes
+  switchWindowTip: Switch windows and select the program to monitor
