--- a/src/locales/zh-CN.yaml
+++ b/src/locales/zh-CN.yaml
@@ -68,3 +68,7 @@ chart:
   week:
     active: 一周活跃状态
     switch: 切换
+monitor:
+  filter: 切换筛选开关
+  needSwitchFilter: 需要打开筛选开关，才能监听到窗口变化
+  switchWindowTip: 切换窗口，选出要监听的程序
