总览页面图表改为周月切换

--- a/src/locales/en-US.yaml
+++ b/src/locales/en-US.yaml
@@ -65,10 +65,9 @@ sync:
 timer:
   countdown: The countdown has reached the target time
   timing: Timing
-chart:
-  week:
-    active: One week active status
-    switch: Switch
+overview:
+  week: Last week
+  month: Last month
 monitor:
   filter: Toggle filter switch
   needSwitchFilter: You need to turn on the filter switch to listen for window changes
