添加总览图表切换类型

--- a/src/locales/en-US.yaml
+++ b/src/locales/en-US.yaml
@@ -68,6 +68,8 @@ timer:
 overview:
   week: Last week
   month: Last month
+  plan: Plan
+  label: Label
 monitor:
   filter: Toggle filter switch
   needSwitchFilter: You need to turn on the filter switch to listen for window changes
