refactor: 修改monitor添加时的交互和布局

--- a/src/locales/en-US.yaml
+++ b/src/locales/en-US.yaml
@@ -73,9 +73,8 @@ overview:
   label: Label
   empty: There are no monuments here, only records
 monitor:
-  filter: Toggle filter switch
-  needSwitchFilter: You need to turn on the filter switch to listen for window changes
-  switchWindowTip: Switch windows and select the program to monitor
+  filterProgram: Filter Program to monitor
+  switchWindowTip: Switch to another application window to get data
 activity:
   idle: Idle
   detail: Open log
