--- a/src/locales/zh-CN.yaml
+++ b/src/locales/zh-CN.yaml
@@ -73,9 +73,8 @@ overview:
   label: 标签
   empty: 这里没有丰碑，只有记录
 monitor:
-  filter: 切换筛选开关
-  needSwitchFilter: 需要打开筛选开关，才能监听到窗口变化
-  switchWindowTip: 切换窗口，选出要监听的程序
+  filterProgram: 筛选要监听的程序
+  switchWindowTip: 切换到其他应用窗口，获取数据
 activity:
   idle: 空闲
   detail: 展开日志
