feat: 添加开机启动选项

--- a/src/locales/en-US.yaml
+++ b/src/locales/en-US.yaml
@@ -9,6 +9,7 @@ nav:
 config:
   locale: Language
   checkUpdate: Check update
+  autostart: Auto start
 plan:
   create: Create plan
   update: Update plan
