--- a/src/locales/zh-CN.yaml
+++ b/src/locales/zh-CN.yaml
@@ -39,7 +39,6 @@ note:
   update:
     title: 修改记录
     timeRange: 时间范围
-    description: 描述
 modal:
   submit: 确定
   cancel: 取消
@@ -75,7 +74,7 @@ monitor:
   switchWindowTip: 切换到其他应用窗口，获取数据
 program:
   update: 更新程序
-  description: 名称
+  name: 名称
   color: 颜色
 activity:
   idle: 空闲
