feat(moment): 编辑

--- a/src/locales/en-US.yaml
+++ b/src/locales/en-US.yaml
@@ -89,6 +89,7 @@ moment:
   create: Record the moment
   inputTitle: Input title
   submit: Submit
+  edit: Edit
   tip:
     emptyTitle: Need to input title
   editor:
