--- a/src/locales/en-US.yaml
+++ b/src/locales/en-US.yaml
@@ -101,3 +101,8 @@ moment:
     listNumbered: List numbered
     quote: Quote
     create: Create
+notiwind:
+  success: Success
+  info: Info
+  warning: Warning
+  error: Error
