i18n 数据库错误

--- a/src/locales/en-US.yaml
+++ b/src/locales/en-US.yaml
@@ -106,3 +106,6 @@ notiwind:
   info: Info
   warning: Warning
   error: Error
+database:
+  RAW: 'Unhandled database error: ({message})'
+  SQLITE_CONSTRAINT_UNIQUE: Duplicate value already exists
