添加空状态

--- a/src/locales/en-US.yaml
+++ b/src/locales/en-US.yaml
@@ -109,3 +109,5 @@ notiwind:
 database:
   RAW: 'Unhandled database error: ({message})'
   SQLITE_CONSTRAINT_UNIQUE: Duplicate value already exists
+hint:
+  empty: No data
