--- a/src/locales/en-US.yaml
+++ b/src/locales/en-US.yaml
@@ -111,3 +111,7 @@ database:
   SQLITE_CONSTRAINT_UNIQUE: Duplicate value already exists
 hint:
   empty: No data
+titleBar:
+  view:
+    desc: View
+    setting: Setting
