--- a/src/locales/zh-CN.yaml
+++ b/src/locales/zh-CN.yaml
@@ -13,6 +13,9 @@ config:
   locale: 语言
   checkUpdate: 检查更新
   autostart: 开机启动
+  timelineMinMinute: 最小时间
+  desc:
+    timelineMinMinute: 时间线显示时，筛选掉小于当前分钟的片段
 plan:
   create: 创建计划
   update: 修改计划
