timeline添加筛选条件

--- a/src/locales/en-US.yaml
+++ b/src/locales/en-US.yaml
@@ -126,3 +126,9 @@ titleBar:
   help:
     desc: Help
     about: About
+timeline:
+  plan: Plan
+  label: Label
+  monitor: Monitor
+  filter: Filter Categories
+  reset: Reset Filter condition
