--- a/src/locales/zh-CN.yaml
+++ b/src/locales/zh-CN.yaml
@@ -100,6 +100,7 @@ moment:
   tip:
     emptyTitle: 需要输入标题
     duplicateTitle: 已存在此标题
+    notSave: 内容未保存，确定退出吗?
   editor:
     uodo: 撤销
     redo: 重做
