timeline 相同项折叠

--- a/src/locales/en-US.yaml
+++ b/src/locales/en-US.yaml
@@ -133,6 +133,8 @@ timeline:
   monitor: Monitor
   filter: Filter Categories
   reset: Reset Filter condition
+timelineGraph:
+  include: (Including {count} items, the actual time spent is {totalTime})
 upload:
   webImage: Unsupported image types filtered
   webVideo: Unsupported video types filtered
