--- a/src/locales/zh-CN.yaml
+++ b/src/locales/zh-CN.yaml
@@ -133,6 +133,8 @@ timeline:
   monitor: 监听
   filter: 筛选类别
   reset: 重置筛选条件
+timelineGraph:
+  include: (共包含{count}项，实际耗时{totalTime})
 upload:
   webImage: 已过滤不支持的图片类型
   webVideo: 已过滤不支持的视频类型
