--- a/src/locales/zh-CN.yaml
+++ b/src/locales/zh-CN.yaml
@@ -78,6 +78,7 @@ overview:
   plan: 计划
   label: 标签
   create: 创建展示组件
+  update: 更新展示组件
 monitor:
   filterProgram: 筛选要监听的程序
   switchWindowTip: 切换到其他应用窗口，获取数据
