处理多端路由、导航按钮

--- a/src/locales/en-US.yaml
+++ b/src/locales/en-US.yaml
@@ -9,6 +9,8 @@ nav:
   config: Config
   about: About
   moment: Moment
+  list: List
+  account: Account
 config:
   locale: Language
   checkUpdate: Check update
