desktop添加滑动锁定

--- a/src/locales/en-US.yaml
+++ b/src/locales/en-US.yaml
@@ -164,5 +164,7 @@ widget:
 statusBar:
   timer: Timing...
   timeline: Filter Categories
+  lock: Drag lock
+  unlock: Drag unlock
 gridCard:
   move: Move
