--- a/src/locales/en-US.yaml
+++ b/src/locales/en-US.yaml
@@ -171,6 +171,7 @@ statusBar:
   timeline: Filter Categories
   lock: Drag lock
   unlock: Drag unlock
+  refresh: Refresh
 gridCard:
   move: Move
 sync:
