--- a/src/locales/zh-CN.yaml
+++ b/src/locales/zh-CN.yaml
@@ -118,6 +118,8 @@ moment:
     listBulleted: 列表
     listNumbered: 有序列表
     quote: 引用
+    image: 图片
+    video: 视频
 notiwind:
   success: 成功
   info: 提示
