--- a/src/locales/en-US.yaml
+++ b/src/locales/en-US.yaml
@@ -115,6 +115,10 @@ moment:
   placeholder: '[Image]'
   boxLabel: Save to
   createdAt: 'Created at: {date}'
+  link:
+    desc: Link
+    snackbar: Currently in candidate state, select the object that needs to be linked
+    confirmTip: The selected {count} item will be linked to the target. Are you sure?
   box:
     all: All
   tip:
