--- a/src/locales/zh-CN.yaml
+++ b/src/locales/zh-CN.yaml
@@ -83,6 +83,7 @@ updater:
   content: 新版本{version}已发布，确定更新吗?
   checkUpdate: 拉取最新版本时出现错误
   updating: 更新过程中出现错误
+  latest: 已经是最新版本
 timer:
   countdown: 倒计时已达到目标时间
   timing: 计时中
@@ -107,6 +108,7 @@ activity:
 about:
   website: 网站
   github: Github
+  checkUpdate: 检查更新
 moment:
   create: 记录下瞬间
   inputTitle: 输入标题...
