--- a/src/locales/zh-CN.yaml
+++ b/src/locales/zh-CN.yaml
@@ -163,6 +163,7 @@ titleBar:
   help:
     desc: 帮助
     about: 关于
+    log: 打开日志文件夹
 timeline:
   plan: 计划
   label: 标签
@@ -205,7 +206,6 @@ statusBar:
     switch:
       year: 切换到年
       month: 切换到月
-
 gridCard:
   move: 移动
 sync:
