打开开发者工具

--- a/src/locales/en-US.yaml
+++ b/src/locales/en-US.yaml
@@ -164,6 +164,7 @@ titleBar:
     desc: Help
     about: About
     log: Open log dir
+    devtools: Open developer tools
 timeline:
   plan: Plan
   label: Label
