总览表单添加描述

--- a/src/locales/en-US.yaml
+++ b/src/locales/en-US.yaml
@@ -191,6 +191,11 @@ widget:
     SINGLE_CATEGORY_BAR: Single category bar
     TEXT_SUMMARY: Text Summary
     DAILY_ACTIVIRY: Daily activity
+  subtitle:
+    ACTIVE_STATUS_CALENDAR: Summary of Daily Records Over the Past Year
+    SINGLE_CATEGORY_BAR: Daily single item record for the past 30 days
+    TEXT_SUMMARY: Average duration of a single category
+    DAILY_ACTIVIRY: Hourly records for 24 hours
   column: Occupy column
   row: Occupy row
   singleCategoryBar:
